[tool.poetry]
name = "spp-network-analysis"
version = "0.1.0"
description = "Analysis of SPP network topology and constraints"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.0"
jupyter = "^1.0.0"
scipy = "^1.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 